# aos

./: .gitignore  LICENSE  README.md
deprecated/: .editorconfig  .gitignore  README.md
deprecated/edk2-stable202402/: .gitignore  bmod.bat  edk2-stable202402.code-workspace
deprecated/edk2-stable202402/AOS/: AOS.dec  AOS.dsc  module.uni
deprecated/kernel/: CMakeLists.txt  CMakePresets.json  kernel.code-workspace
deprecated/kernel/boot/: CMakeLists.txt
deprecated/kernel/boot/core/: entry.c  test.nasm
deprecated/kernel/boot/include/: func_table.h  params.h
deprecated/kernel/boot/include/module/: init.h  memory.h  util.h
deprecated/kernel/boot/init/: CMakeLists.txt  trampoline.nasm
deprecated/kernel/boot/init/include/: init.h
deprecated/kernel/boot/memory/: CMakeLists.txt  init.c
deprecated/kernel/boot/test/: README.md
deprecated/kernel/boot/test/memory/: output.txt  pmm_test.txt
deprecated/kernel/boot/util/: CMakeLists.txt  memset.nasm  ms_call_4.nasm  readport.nasm  writeport.nasm
deprecated/kernel/boot/util/include/: init.h
deprecated/kernel/cmake/: toolchain.cmake
deprecated/kernel/include/: basic_builtin.h
deprecated/vm/: .gitignore  README.md  qemu.bat  qemu_dbg.bat
edk2-stable202402/: .gitignore  .ignore  bovmf.bat  btool.bat  edk2-stable202402.code-workspace  qemu.bat
edk2-stable202402/.edkCode/: cscope.files  edk2_workspace_properties.json  module_report.json
edk2-stable202402/AOS/: module.inf
edk2-stable202402/AOS/include/: params.h
edk2-stable202402/AOS/src/: env.c  graphics.c  module.c
edk2-stable202402/ToolPkg/: ToolPkg.dec  ToolPkg.dsc
edk2-stable202402/disk/: HelloWorld.efi  Info.efi  NvVars
include/: boot_params.h  reserved.h
java/compiler/: .classpath
java/compiler/src/: module-info.java
java/lexer/: .classpath
java/lexer/src/: module-info.java
java/rbtree/: .project
kernel/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aos.kernel.code-workspace  kernel.code-workspace
kernel/boot/: CMakeLists.txt
kernel/boot/base/: CMakeLists.txt  base_memcpy.nasm  base_memset.nasm  base_ms_call_2.nasm  base_readport.nasm  base_writeport.nasm  baseimpl.h  table.c  test.c  trampoline.nasm
kernel/boot/base/func/: base_memcpy.nasm  base_ms_call_4.nasm
kernel/boot/base/include/: impl.h  table.h
kernel/boot/core/: CMakeLists.txt  entry.c  entry.nasm  test.nasm
kernel/boot/include/: config.h  param.h  params.h
kernel/boot/include/config/: boot.h
kernel/boot/include/module/: base.h  memory.h
kernel/boot/init/: CMakeLists.txt  init.c
kernel/boot/init/include/: global.h
kernel/boot/mem/: CMakeLists.txt  entry.nasm  init.c  paging.c  pmm.c  pmm.h
kernel/boot/memory/: CMakeLists.txt  bitmap.c  entry.nasm  init.c  init_step2.nasm  paging.c  pmm.c  pmm.c.h  ptm.c  table.c  test.nasm  tree.c  vmm.c  vmm.c.h
kernel/boot/memory/include/: bitmap.h  boot_bitmap.h  boot_buddy.h  boot_tree.h  init.h  paging.h  pmm.h  ptm.h  table.h  tree.h  vmm.h
kernel/boot/test/memory/: output.txt  tree_test.txt
kernel/boot/util/: CMakeLists.txt  init.c  memcpy.nasm  ms_call_2.nasm
kernel/boot/util/include/: impl.h
kernel/cmake/: DebugVariables.cmake  toolchain-windows-clang-x86_64.cmake  toolchain.cmake
kernel/cpu/: CMakeLists.txt  info.c  pre_cpu_vars.c
kernel/entry/: entry.c  main.c  trampoline.S
kernel/firmware/: CMakeLists.txt  uefi.c
kernel/include/: base.h  basic_builtin.h  basic_type.h  builtin.h  klibc.h  main.h  params.h  test.h  type.h
kernel/include/base/: efi.h  memtype.h  type.h
kernel/include/boot/: base.h  boot.h  mem.h  param.h
kernel/include/cpu/: info.h  interrupt.h  per_cpu_vars.h
kernel/include/firmware/: service.h  status.h  system.h  time.h  uefi.h
kernel/include/fw/: efi.h
kernel/include/init/: module.h  params.h
kernel/include/lib/: char.h  convert.h  io.h  kdef.h  kdefs.h  ktype.h  ktypes.h  memory.h  string.h  util.h  varargs.h
kernel/include/mem/: mtype.h
kernel/include/memory/: buddy.h  init.h  memory_defs.h  page_frame.h  pool.h  vma.h
kernel/include/panic/: callback.h  output.h  panic.h
kernel/include/support/: asm.h  atomic.h  barrier.h  cache.h  char.h  const.h  control.h  convert.h  fixed.h  format.h  handle.h  io.h  kdef.h  ktype.h  memory.h  string.h  sync.h  time.h  type.h  util.h  varargs.h
kernel/include/test/: utest.h
kernel/include/test/lib/: test.h
kernel/include/test/support/: test.h
kernel/include/util/: bitmap_pool.h  linked_list.h  tree.h
kernel/init/: CMakeLists.txt  entry.c  main.c  temp.S  test.c  trampoline.S  ttc.S
kernel/kernel/: main.c
kernel/klibc/: CMakeLists.txt  kstring.S  kstring.c
kernel/lib/: CMakeLists.txt  char.c  convert.c  memory.S  memory.c  string.c  util.c
kernel/memory/: CMakeLists.txt  buddy.c  init.c  memoryi.h  page.c  pool.c  pre_cpu.c  ptm.c
kernel/panic/: CMakeLists.txt  panic.c
kernel/script/: debug.cmake  debug.ld  release.ld  target.cmake  toolchain-windows-clang-x86_64-test.cmake  toolchain-windows-clang-x86_64.cmake
kernel/support/: CMakeLists.txt  char.c  convert.c  format.c  memory.c  string.c  sync.c
kernel/test/: CMakeLists.txt  CMakePresets.json  aos.kernel.test.code-workspace
kernel/test/hello/: CMakeLists.txt  hello.c
kernel/test/lib/: CMakeLists.txt  char.c  convert.c  memory.c  string.c  test.c
kernel/test/support/: CMakeLists.txt  char.c  convert.c  fixed.c  format.c  memory.c  string.c  test.c
kernel/trampoline/: main.c
research/font_parser/: .gitignore  CMakeLists.txt  CMakePresets.json  aos.research.font_parser.code-workspace
research/font_parser/src/: fixed.h  type.h  window.c
test/: .gitignore  debug.manifest.json  manifest.json  pack.py  qemu.bat  release.manifest.json  sign.py
test/paging/: .gitignore  CMakeLists.txt  CMakePresets.json  boot.h  main.c  mem.h  type.h
uefi/: .gitignore  aos.uefi.code-workspace  baos.bat  baos_release.bat  bovmf.bat  edksetup.bat  version
uefi/AOS/: AOS.dec  AOS.dsc  AOS.uni  uefi.inf  uefi.uni
vm/: .gitignore  qemu.bat  qemu_dbg.bat  vbox.bat
vs/CTest/: CMakeLists.txt  CMakePresets.json  CTest.cpp  CTest.h
(+139 files in other folders)
